2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Don't build and install GDB.

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-generic.exp: Move extra file loads
	to after the main config file is loaded. Add gdb-extra.exp. Mark
	as using GDB stub.
	* dejagnu/gdb-extra.exp: Created as placeholder.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Move most gdbserver config
	to arc-linux-generic.exp
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Set most gdbserver
	config.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-nsim.exp: Correct code accidentally
	introduced.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Configure to run with
	gdbserver target if GDB is the tool.
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Decide base
	configuration to load based on tool.
	* dejagnu/ftp-extra.exp (ftp_download): Add code to set executable
	bits of transferred file if necessary.
	* dejagnu/telnet-extra.exp (telnet_spawn): New proc.

2013-02-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-linux.sh: Use -fcommon -mno-sdata when building gdbserver.

2013-02-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-linux.sh: Build a 4.8 static busybox only.
	* run-uclibc-tests.sh: Build directories corrected for 4.8 release.

2013-02-11  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh (uclibc): Switch to 4.8 branch.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check, save_res): Remove use of bash "function"
	keywords.
	* build-all.sh: Correct comment typo.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Use "=" not "==" in [] comparisons.
