@@ -1,3 +1,8 @@
+2013-02-25  Simon Cook  <simon.cook@embecosm.com>
+
+	* arc-versions.sh: Updated binutils, gcc, gdb and newlib branch
+	references
+
 2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-elf32.sh: Don't build and install GDB.
